# meson

mesonbuild/compilers/: compilers.py
test cases/common/235 declare deps duplicates/: meson.build  prog.c
test cases/common/235 declare deps duplicates/include/: meson.build
test cases/common/235 declare deps duplicates/include/dep/: dep.h
test cases/common/235 declare deps duplicates/subsystem-a/: a.c  a.h  meson.build
test cases/common/235 declare deps duplicates/subsystem-b/: b.c  b.h  meson.build
test cases/common/235 transitive compile args/: meson.build  prog.c
test cases/common/235 transitive compile args/foobar/: foobar.c  foobar.h  meson.build
